--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -364,15 +364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      ". logout, save(Investor-Sentiment/outputs/Table_Sum) word replace: tabstat  *_n\n",
-      "> eg total_mv pe_ttm_weight , ///\n",
+      ". logout, save(Investor-Sentiment/outputs/Table_Sum) rtf replace: tabstat *_neg\n",
+      ">  total_mv pe_ttm_weight , ///\n",
       "> s(N sd mean p50 min max ) f(%12.4f) c(s)\n",
       "\n",
       "    Variable |            N           SD         Mean          p50          Min\n",
@@ -390,17 +390,28 @@
       "    total_mv |      97.4151\n",
       "pe_ttm_wei~t |     138.8300\n",
       "---------------------------\n",
-      "\n",
-      "Investor-Sentiment/outputs/Table_Sum.rtf\n",
-      "dir\n",
-      "\n",
-      ". \n"
+      "option rtf not allowed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Stata:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/miniconda3/envs/Stata/lib/python3.9/threading.py\", line 980, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/stata17/utilities/pystata/core/stout.py\", line 176, in run\n",
+      "    raise SystemError(output)\n",
+      "SystemError: r(198);\n",
+      "r(198);\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "%%stata -d df_analyst -force\n",
-    "logout, save(Investor-Sentiment/outputs/Table_Sum) word replace: tabstat  *_neg total_mv pe_ttm_weight , ///\n",
+    "logout, save(Investor-Sentiment/outputs/Table_Sum) replace: tabstat *_neg total_mv pe_ttm_weight , ///\n",
     "s(N sd mean p50 min max ) f(%12.4f) c(s)"
    ],
    "metadata": {
@@ -759,7 +770,6 @@
       "> title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"00090\n",
       "> 5.SH\" \"000906.SH\" \"000985.SH\") ///\n",
       "> nogaps compress b(%12.4f)\n",
-      "(file Investor-Sentiment/outputs/analyst_idx.txt not found)\n",
       "\n",
       "Table1 Main Market\n",
       "-------------------------------------------------------------------------------\n",
