--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -364,15 +364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      ". logout, save(Investor-Sentiment/outputs/Table_Sum) rtf replace: tabstat *_neg\n",
-      ">  total_mv pe_ttm_weight , ///\n",
+      ". logout, save(Investor-Sentiment/outputs/Table_Sum) replace: tabstat *_neg tot\n",
+      "> al_mv pe_ttm_weight , ///\n",
       "> s(N sd mean p50 min max ) f(%12.4f) c(s)\n",
       "\n",
       "    Variable |            N           SD         Mean          p50          Min\n",
@@ -390,22 +390,8 @@
       "    total_mv |      97.4151\n",
       "pe_ttm_wei~t |     138.8300\n",
       "---------------------------\n",
-      "option rtf not allowed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Stata:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/miniconda3/envs/Stata/lib/python3.9/threading.py\", line 980, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/usr/local/stata17/utilities/pystata/core/stout.py\", line 176, in run\n",
-      "    raise SystemError(output)\n",
-      "SystemError: r(198);\n",
-      "r(198);\n",
-      "\n"
+      "\n",
+      ". \n"
      ]
     }
    ],
@@ -524,46 +510,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      ". est clear\n",
+      "\n",
+      ". encode ts_code,gen(id)\n",
+      "\n",
+      ". xtset id time\n",
+      "\n",
+      "Panel variable: id (unbalanced)\n",
+      " Time variable: time, 1 to 2146\n",
+      "         Delta: 1 unit\n",
+      "\n",
+      ". \n",
+      ". //缩尾\n",
+      ". winsor2 opt_profit, cut(1 99) by(id) label\n",
+      "\n",
+      ". \n",
+      ". //文本情绪回归\n",
+      ". rename(tex_neg) (media_neg)\n",
+      "\n",
+      ". by id, sort : eststo:  qui reg  opt_profit L.media_neg  L.total_mv L.pe_ttm_w\n",
+      "> eight L.profit_avg   i.trade_year   ///\n",
+      "> if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000985.SH\"),r\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000010.SH\n",
+      "(est1 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000015.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000016.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000300.SH\n",
+      "(est2 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000903.SH\n",
+      "(est3 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000905.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000906.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000985.SH\n",
+      "(est4 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 399005.SZ\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 399006.SZ\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 399310.SZ\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      ". rename(media_neg) (tex_neg)\n",
+      "\n",
+      ". \n",
+      ". //图像情绪回归\n",
+      ". rename(img_neg) (media_neg)\n",
+      "\n",
+      ". by id, sort : eststo:  qui reg  opt_profit L.media_neg  L.total_mv L.pe_ttm_w\n",
+      "> eight L.profit_avg   i.trade_year   ///\n",
+      "> if inlist(ts_code ,\"000010.SH\",  \"000300.SH\", \"000903.SH\", \"000985.SH\"),r\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000010.SH\n",
+      "(est5 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000015.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000016.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000300.SH\n",
+      "(est6 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000903.SH\n",
+      "(est7 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000905.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000906.SH\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 000985.SH\n",
+      "(est8 stored)\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 399005.SZ\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 399006.SZ\n",
       "no observations\n",
       "no observations\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "-> 399310.SZ\n",
       "no observations\n",
       "no observations\n",
-      "\n"
+      "\n",
+      ". rename(media_neg) (img_neg)\n",
+      "\n",
+      ". \n",
+      ". //增加固定效应\n",
+      ". estadd local Year \"Yes\" : *\n",
+      "\n",
+      ". \n",
+      ". //输出\n",
+      ". esttab using Investor-Sentiment/outputs/analyst_sent,r type ///\n",
+      "> star(* 0.1 ** 0.05 *** 0.01) ///\n",
+      "> keep(*_neg L.total_mv L.pe_ttm_weight L.profit_avg ) ///\n",
+      "> stats( Year r2_a N, fmt(%3s %12.2f %12.0f)) ///\n",
+      "> title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"00098\n",
+      "> 5.SH\") ///\n",
+      "> mgroups(\"tex_neg\" \"img_neg\", pattern(1 0 0 0 1 0 0 0) ) ///\n",
+      "> nogaps compress b(%12.4f)\n",
+      "\n",
+      "Table1 Main Market\n",
+      "-------------------------------------------------------------------------------\n",
+      "> -----------------------------------\n",
+      "             tex_neg                                             img_neg       \n",
+      ">                                    \n",
+      "                 (1)          (2)          (3)          (4)          (5)       \n",
+      ">    (6)          (7)          (8)   \n",
+      "           000010.SH    000300.SH    000903.SH    000985.SH    000010.SH    000\n",
+      "> 300.SH    000903.SH    000985.SH   \n",
+      "-------------------------------------------------------------------------------\n",
+      "> -----------------------------------\n",
+      "L.media_~g   -0.7439***   -0.7472**    -1.3470***   -1.1664***   -0.2061      -\n",
+      "> 0.1730      -0.7868       0.2571   \n",
+      "             (-2.59)      (-2.48)      (-2.93)      (-3.22)      (-0.61)      (\n",
+      "> -0.49)      (-1.49)       (0.64)   \n",
+      "L.total_mv   -0.9692***   -0.2555**     4.4454***   -0.3616***   -0.9672***   -\n",
+      "> 0.2572**     4.4355***   -0.3618***\n",
+      "             (-4.56)      (-1.99)       (8.15)     (-11.39)      (-4.54)      (\n",
+      "> -2.00)       (8.11)     (-11.32)   \n",
+      "L.pe_ttm~t    1.3275***   -0.0253      -9.2393***    0.4434***    1.3307***   -\n",
+      "> 0.0167      -9.2020***    0.4451***\n",
+      "              (3.14)      (-0.08)      (-8.66)       (5.33)       (3.14)      (\n",
+      "> -0.06)      (-8.61)       (5.34)   \n",
+      "L.profit~g    0.3068***    0.1070***   -0.1514***    2.0711***    0.3073***    \n",
+      "> 0.1079***   -0.1488***    2.0872***\n",
+      "              (8.53)       (2.65)      (-3.71)       (7.94)       (8.53)       \n",
+      "> (2.68)      (-3.64)       (8.00)   \n",
+      "-------------------------------------------------------------------------------\n",
+      "> -----------------------------------\n",
+      "Year             Yes          Yes          Yes          Yes          Yes       \n",
+      ">    Yes          Yes          Yes   \n",
+      "r2_a            0.92         0.93         0.94         0.90         0.92       \n",
+      ">   0.93         0.94         0.90   \n",
+      "N               2063         2063         2063         2058         2063       \n",
+      ">   2063         2063         2058   \n",
+      "-------------------------------------------------------------------------------\n",
+      "> -----------------------------------\n",
+      "t statistics in parentheses\n",
+      "* p<0.1, ** p<0.05, *** p<0.01\n",
+      "(output written to Investor-Sentiment/outputs/analyst_sent.txt)\n",
+      "\n",
+      ". \n"
      ]
     }
    ],
    "source": [
-    "%%stata -d df_analyst -force -qui\n",
+    "%%stata -d df_analyst -force\n",
     "est clear\n",
     "encode ts_code,gen(id)\n",
     "xtset id time\n",
@@ -686,16 +837,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
+      ". \n",
       ". est clear\n",
       "\n",
-      ". \n",
       ". //设定面板数据\n",
       ". encode ts_code,gen(id)\n",
       "\n",
@@ -764,12 +915,13 @@
       "\n",
       ". \n",
       ". //输出结果\n",
+      ". \n",
       ". esttab using Investor-Sentiment/outputs/analyst_idx ,r type ///\n",
-      "> keep(opt_profit:L*.opt_profit) ///\n",
+      "> keep(close_chg:L*.opt_profit) ///\n",
       "> stats( Year Month WeekDay r2_1 N, fmt(%3s %3s %3s %12.2f %12.0f)) ///\n",
       "> title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"00090\n",
       "> 5.SH\" \"000906.SH\" \"000985.SH\") ///\n",
-      "> nogaps compress b(%12.4f)\n",
+      "> nogaps compress b(%12.4f) star(* 0.1 ** 0.05 *** 0.01)\n",
       "\n",
       "Table1 Main Market\n",
       "-------------------------------------------------------------------------------\n",
@@ -780,28 +932,28 @@
       "> 985.SH    000906.SH    000985.SH    399005.SZ    399006.SZ    399310.SZ   \n",
       "-------------------------------------------------------------------------------\n",
       "> --------------------------------------------------------------------------\n",
-      "opt_profit                                                                     \n",
+      "close_chg                                                                      \n",
       ">                                                                           \n",
-      "L.opt_pr~t    1.0149***    1.0120***    1.0042***    1.0099***    0.9981***    \n",
-      "> 1.0109***    1.0095***    1.0073***    1.0009***    0.9980***    1.0007***\n",
-      "             (46.94)      (46.77)      (46.47)      (46.70)      (46.18)      (\n",
-      "> 46.75)      (46.67)      (46.53)      (46.30)      (46.13)      (45.96)   \n",
-      "L2.opt_p~t   -0.0072      -0.0052      -0.0009      -0.0045      -0.0029      -\n",
-      "> 0.0094      -0.0054      -0.0023      -0.0055      -0.0013      -0.0037   \n",
-      "             (-0.23)      (-0.17)      (-0.03)      (-0.15)      (-0.09)      (\n",
-      "> -0.30)      (-0.18)      (-0.07)      (-0.18)      (-0.04)      (-0.12)   \n",
-      "L3.opt_p~t   -0.0041      -0.0095      -0.0062      -0.0021       0.0002       \n",
-      "> 0.0006      -0.0003      -0.0000      -0.0062       0.0018      -0.0001   \n",
-      "             (-0.13)      (-0.31)      (-0.20)      (-0.07)       (0.01)       \n",
-      "> (0.02)      (-0.01)      (-0.00)      (-0.20)       (0.06)      (-0.00)   \n",
-      "L4.opt_p~t   -0.0074      -0.0051      -0.0048      -0.0066      -0.0027      -\n",
-      "> 0.0014      -0.0053      -0.0055       0.0115      -0.0011       0.0076   \n",
-      "             (-0.24)      (-0.17)      (-0.16)      (-0.21)      (-0.09)      (\n",
-      "> -0.05)      (-0.17)      (-0.18)       (0.38)      (-0.04)       (0.25)   \n",
-      "L5.opt_p~t    0.0008       0.0025       0.0006      -0.0004      -0.0031      -\n",
-      "> 0.0051      -0.0028      -0.0053      -0.0126      -0.0015      -0.0154   \n",
-      "              (0.04)       (0.12)       (0.03)      (-0.02)      (-0.14)      (\n",
-      "> -0.24)      (-0.13)      (-0.24)      (-0.58)      (-0.07)      (-0.71)   \n",
+      "L.opt_pr~t   -0.0043       0.0077      -0.0224      -0.0056      -0.0060      -\n",
+      "> 0.0014      -0.0122      -0.0123       0.0106       0.0089      -0.0022   \n",
+      "             (-0.12)       (0.27)      (-0.94)      (-0.16)      (-0.42)      (\n",
+      "> -0.09)      (-0.37)      (-0.39)       (0.59)       (0.85)      (-0.15)   \n",
+      "L2.opt_p~t   -0.0113       0.0163      -0.0028      -0.0130      -0.0143       \n",
+      "> 0.0010       0.0006       0.0083      -0.0187      -0.0197      -0.0173   \n",
+      "             (-0.22)       (0.40)      (-0.08)      (-0.27)      (-0.71)       \n",
+      "> (0.05)       (0.01)       (0.18)      (-0.73)      (-1.33)      (-0.84)   \n",
+      "L3.opt_p~t   -0.0294      -0.0337       0.0003      -0.0208       0.0139       \n",
+      "> 0.0009      -0.0297      -0.0386       0.0137       0.0099       0.0242   \n",
+      "             (-0.58)      (-0.83)       (0.01)      (-0.43)       (0.69)       \n",
+      "> (0.04)      (-0.63)      (-0.86)       (0.53)       (0.67)       (1.18)   \n",
+      "L4.opt_p~t    0.0561       0.0419      -0.0072       0.0516       0.0003      -\n",
+      "> 0.0056       0.0464       0.0383      -0.0042      -0.0063      -0.0138   \n",
+      "              (1.11)       (1.03)      (-0.22)       (1.06)       (0.01)      (\n",
+      "> -0.25)       (0.99)       (0.85)      (-0.16)      (-0.43)      (-0.67)   \n",
+      "L5.opt_p~t   -0.0168      -0.0328       0.0249      -0.0187       0.0032       \n",
+      "> 0.0050      -0.0100       0.0003      -0.0050       0.0058       0.0028   \n",
+      "             (-0.47)      (-1.14)       (1.05)      (-0.54)       (0.22)       \n",
+      "> (0.32)      (-0.30)       (0.01)      (-0.28)       (0.55)       (0.19)   \n",
       "-------------------------------------------------------------------------------\n",
       "> --------------------------------------------------------------------------\n",
       "Year             Yes          Yes          Yes          Yes          Yes       \n",
@@ -817,7 +969,7 @@
       "-------------------------------------------------------------------------------\n",
       "> --------------------------------------------------------------------------\n",
       "t statistics in parentheses\n",
-      "* p<0.05, ** p<0.01, *** p<0.001\n",
+      "* p<0.1, ** p<0.05, *** p<0.01\n",
       "(output written to Investor-Sentiment/outputs/analyst_idx.txt)\n",
       "\n",
       ". \n"
@@ -827,7 +979,7 @@
    "source": [
     "%%stata -d df_analyst -force\n",
     "\n",
-    "\n",
+    "est clear\n",
     "//设定面板数据\n",
     "encode ts_code,gen(id)\n",
     "xtset id time\n",
@@ -841,12 +993,12 @@
     "estadd local WeekDay \"Yes\" : *\n",
     "\n",
     "//输出结果\n",
-    "est clear\n",
+    "\n",
     "esttab using Investor-Sentiment/outputs/analyst_idx ,r type ///\n",
-    "keep(opt_profit:L*.opt_profit) ///\n",
+    "keep(close_chg:L*.opt_profit) ///\n",
     "stats( Year Month WeekDay r2_1 N, fmt(%3s %3s %3s %12.2f %12.0f)) ///\n",
     "title(\"Table1 Main Market\") mtitle(\"000010.SH\" \"000300.SH\" \"000903.SH\" \"000905.SH\" \"000906.SH\" \"000985.SH\") ///\n",
-    "nogaps compress b(%12.4f)"
+    "nogaps compress b(%12.4f) star(* 0.1 ** 0.05 *** 0.01)"
    ],
    "metadata": {
     "collapsed": false
