--- a/notebooks/IS-SEM.ipynb
+++ b/notebooks/IS-SEM.ipynb
@@ -100,7 +100,8 @@
    ],
    "source": [
     "df_media = cudf.read_parquet(DATASETS_PATH + 'MEDIA_SENT_TDATE_WC.parquet')\n",
-    "df_media"
+    "df_media\n",
+    "#"
    ],
    "metadata": {
     "collapsed": false
