--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -12,6 +12,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  ___  ____  ____  ____  ____ ©\n",
+      " /__    /   ____/   /   ____/      17.0\n",
+      "___/   /   /___/   /   /___/       MP—Parallel Edition\n",
+      "\n",
+      " Statistics and Data Science       Copyright 1985-2021 StataCorp LLC\n",
+      "                                   StataCorp\n",
+      "                                   4905 Lakeway Drive\n",
+      "                                   College Station, Texas 77845 USA\n",
+      "                                   800-STATA-PC        https://www.stata.com\n",
+      "                                   979-696-4600        stata@stata.com\n",
+      "\n",
+      "Stata license: Single-user 8-core , expiring  1 Jan 2025\n",
+      "Serial number: 501709301094\n",
+      "  Licensed to: Colin's Stata\n",
+      "               Love U\n",
+      "\n",
+      "Notes:\n",
+      "      1. Unicode is supported; see help unicode_advice.\n",
+      "      2. More than 2 billion observations are allowed; see help obs_advice.\n",
+      "      3. Maximum number of variables is set to 5,000; see help set_maxvar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import cudf  #CUDA计算\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 自行编写的包\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
+    "sys.path.append('/usr/local/stata17/utilities')\n",
+    "from loader.findata_loader import Loader\n",
+    "from utils.sql import DB\n",
+    "\n",
+    "# Stata\n",
+    "from pystata import config\n",
+    "\n",
+    "config.init('mp')\n",
+    "# ------------------------------数据集路径----------------------------------#\n",
+    "DATASETS_PATH = '/data/DataSets/investor_sentiment/'"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 数据提取"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
@@ -22,9 +87,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "stata",
    "language": "python",
-   "name": "python3"
+   "display_name": "Stata"
   },
   "language_info": {
    "codemirror_mode": {
