--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -10,6 +10,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 环境导入"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [
@@ -17,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-05 07:00:05.014593: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-06 18:16:33.076528: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -26,31 +35,21 @@
     "from keras.applications.inception_v3 import InceptionV3\n",
     "\n",
     "## 导入建立神经网络的基本模块\n",
-    "from keras.layers import *\n",
-    "from keras.models import *\n",
+    "from keras.preprocessing import image\n",
+    "from keras.models import Model\n",
+    "from keras.layers import Dense, GlobalAveragePooling2D\n",
+    "\n",
     "from keras.optimizers import *\n",
     "from keras.losses import categorical_crossentropy\n",
     "\n",
     "## 导入数据增强模块\n",
+    "import cv2\n",
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "## 导入数据集\n",
-    "from keras.datasets import cifar10, cifar100\n",
-    "\n",
-    "## 导入 keras one-hot 变量转换模块\n",
-    "from keras.utils import to_categorical\n",
-    "\n",
-    "## 导入矩阵运算模块\n",
-    "import numpy as np\n",
-    "## 导入 opencv 来调整图片尺寸\n",
-    "\n",
-    "import cv2\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.applications.inception_v3 import InceptionV3, preprocess_input\n",
-    "from keras.layers import GlobalAveragePooling2D, Dense\n",
-    "from keras.models import Model\n",
-    "from keras.utils.vis_utils import plot_model\n",
-    "from tensorflow.keras.optimizers import Adagrad"
+    "# 可视化\n",
+    "# from keras.utils import plot_model\n",
+    "# from keras_visualizer import visualizer\n",
+    "# from IPython.display import Image, SVG, display\n"
    ],
    "metadata": {
     "collapsed": false
@@ -67,10 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "# 数据准备\n",
+    "DATASET_PATH_ROOT = '/home/ubuntu/notebook/DataSets/TWITTER_IMG_SENT_2015/dataset/'\n",
+    "# 数据增强\n",
     "train_datagen = ImageDataGenerator(\n",
     "        preprocessing_function=preprocess_input,\n",
     "        rotation_range=30,\n",
@@ -89,7 +89,97 @@
     "        shear_range=0.2,\n",
     "        zoom_range=0.2,\n",
     "        horizontal_flip=True,\n",
-    ")"
+    ")\n",
+    "\n",
+    "# 数据输入 #Inception V3规定大小\n",
+    "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=64)\n",
+    "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=64)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 模型设定"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-06 18:16:38.782090: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:38.790523: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:38.792188: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:38.794017: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-01-06 18:16:38.795052: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:38.796615: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:38.798125: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:39.604416: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:39.606064: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:39.607602: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 18:16:39.609025: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 构建基础模型\n",
+    "base_model = InceptionV3(weights='imagenet', include_top=False)  #去掉最后一层\n",
+    "\n",
+    "# 增加新的输出层\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)  # 添加全局平均池化层 将 MxNxC 的张量转换成 1xC 张量，C是通道数\n",
+    "x = Dense(1024, activation='relu')(x)  # 添加一个全连接层\n",
+    "predictions = Dense(2, activation='softmax')(x)  # 自定义自己的分类器，这是一个2分类的分类器\n",
+    "model = Model(inputs=base_model.input, outputs=predictions)  # 构建我们需要训练的完整模型\n",
+    "\n",
+    "# 锁层\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# 在新的数据集上训练几代\n",
+    "# model.fit_generator(...)\n",
+    "\n",
+    "# 编译模型\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
+    "\n",
+    "\n",
+    "# 让我们看看每一层的名字和层号，看看我们应该锁多少层呢：\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 迁移学习"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "history_tl = model.fit_generator(generator=train_generator,\n",
+    "                                 steps_per_epoch=800,  #800\n",
+    "                                 epochs=2,  #2\n",
+    "                                 validation_data=val_generator,\n",
+    "                                 validation_steps=12,  #12\n",
+    "                                 class_weight='auto'\n",
+    "                                 )"
    ],
    "metadata": {
     "collapsed": false
