--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -26,13 +26,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-06 18:16:33.076528: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-06 19:50:26.709256: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
    "source": [
     "## 导入 Inceptionv3 模型\n",
-    "from keras.applications.inception_v3 import InceptionV3\n",
+    "from keras.applications.inception_v3 import InceptionV3, preprocess_input\n",
     "\n",
     "## 导入建立神经网络的基本模块\n",
     "from keras.preprocessing import image\n",
@@ -65,14 +65,46 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "参数区"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "DATASET_PATH_ROOT = '/home/ubuntu/notebook/DataSets/TWITTER_IMG_SENT_2015/dataset/'\n",
+    "BATCH_SIZE = 512\n",
+    "TOTAL_EPOCH = 200"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 617 images belonging to 2 classes.\n",
+      "Found 176 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "# 数据增强\n",
     "train_datagen = ImageDataGenerator(\n",
     "        preprocessing_function=preprocess_input,\n",
+    "        rescale=1. / 255,\n",
     "        rotation_range=30,\n",
     "        width_shift_range=0.2,\n",
     "        height_shift_range=0.2,\n",
@@ -83,6 +115,7 @@
     "\n",
     "val_datagen = ImageDataGenerator(\n",
     "        preprocessing_function=preprocess_input,\n",
+    "        rescale=1. / 255,\n",
     "        rotation_range=30,\n",
     "        width_shift_range=0.2,\n",
     "        height_shift_range=0.2,\n",
@@ -92,8 +125,8 @@
     ")\n",
     "\n",
     "# 数据输入 #Inception V3规定大小\n",
-    "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=64)\n",
-    "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=64)"
+    "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=BATCH_SIZE)\n",
+    "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=BATCH_SIZE)"
    ],
    "metadata": {
     "collapsed": false
@@ -110,24 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-06 18:16:38.782090: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:38.790523: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:38.792188: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:38.794017: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2023-01-06 19:50:28.622679: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:28.631169: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:28.632741: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:28.634462: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-06 18:16:38.795052: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:38.796615: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:38.798125: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:39.604416: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:39.606064: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:39.607602: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-06 18:16:39.609025: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
+      "2023-01-06 19:50:28.635083: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:28.636649: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:28.638138: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:29.445596: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:29.447227: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:29.448710: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-06 19:50:29.450113: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -140,20 +173,7 @@
     "x = GlobalAveragePooling2D()(x)  # 添加全局平均池化层 将 MxNxC 的张量转换成 1xC 张量，C是通道数\n",
     "x = Dense(1024, activation='relu')(x)  # 添加一个全连接层\n",
     "predictions = Dense(2, activation='softmax')(x)  # 自定义自己的分类器，这是一个2分类的分类器\n",
-    "model = Model(inputs=base_model.input, outputs=predictions)  # 构建我们需要训练的完整模型\n",
-    "\n",
-    "# 锁层\n",
-    "for layer in base_model.layers:\n",
-    "    layer.trainable = False\n",
-    "\n",
-    "# 在新的数据集上训练几代\n",
-    "# model.fit_generator(...)\n",
-    "\n",
-    "# 编译模型\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
-    "\n",
-    "\n",
-    "# 让我们看看每一层的名字和层号，看看我们应该锁多少层呢：\n"
+    "model = Model(inputs=base_model.input, outputs=predictions)  # 构建我们需要训练的完整模型"
    ],
    "metadata": {
     "collapsed": false
@@ -171,18 +191,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_23320/2386030165.py:9: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "  history_tl = model.fit_generator(generator=train_generator,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/200\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-06 19:50:58.012466: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
+      "2023-01-06 19:50:58.819916: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 32s 32s/step - loss: 0.6436 - accuracy: 0.6641\n",
+      "Epoch 2/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 2.7404 - accuracy: 0.3281\n",
+      "Epoch 3/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.7241 - accuracy: 0.4199\n",
+      "Epoch 4/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 1.1953 - accuracy: 0.6758\n",
+      "Epoch 5/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 1.4776 - accuracy: 0.6816\n",
+      "Epoch 6/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 1.4792 - accuracy: 0.6602\n",
+      "Epoch 7/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 1.1269 - accuracy: 0.6738\n",
+      "Epoch 8/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.8013 - accuracy: 0.6680\n",
+      "Epoch 9/200\n"
+     ]
+    }
+   ],
    "source": [
+    "# 锁层\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# 编译模型\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
+    "\n",
+    "# 拟合模型\n",
     "history_tl = model.fit_generator(generator=train_generator,\n",
-    "                                 steps_per_epoch=800,  #800\n",
-    "                                 epochs=2,  #2\n",
+    "                                 steps_per_epoch=(617 // BATCH_SIZE),  #800\n",
+    "                                 epochs=TOTAL_EPOCH,  #2\n",
     "                                 validation_data=val_generator,\n",
-    "                                 validation_steps=12,  #12\n",
-    "                                 class_weight='auto'\n",
-    "                                 )"
+    "                                 validation_steps=(176 // BATCH_SIZE),  #12\n",
+    "                                 class_weight=None  #不要这个\n",
+    "                                 )\n",
+    "# 保存\n",
+    "model.save('/data/Models/Twitter2015_iv3_tl.h5')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
