--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -234,7 +234,21 @@
       "1/1 [==============================] - 11s 11s/step - loss: 1.1269 - accuracy: 0.6738\n",
       "Epoch 8/200\n",
       "1/1 [==============================] - 11s 11s/step - loss: 0.8013 - accuracy: 0.6680\n",
-      "Epoch 9/200\n"
+      "Epoch 9/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6141 - accuracy: 0.6797\n",
+      "Epoch 10/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.7654 - accuracy: 0.3516\n",
+      "Epoch 11/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.8919 - accuracy: 0.3340\n",
+      "Epoch 12/200\n",
+      "1/1 [==============================] - 6s 6s/step - loss: 0.8667 - accuracy: 0.3143\n",
+      "Epoch 13/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7248 - accuracy: 0.3714\n",
+      "Epoch 14/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.6143 - accuracy: 0.6571\n",
+      "Epoch 15/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6558 - accuracy: 0.6680\n",
+      "Epoch 16/200\n"
      ]
     }
    ],
