--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -113,6 +113,7 @@
     "        horizontal_flip=True,\n",
     ")\n",
     "\n",
+    "#\n",
     "val_datagen = ImageDataGenerator(\n",
     "        preprocessing_function=preprocess_input,\n",
     "        rescale=1. / 255,\n",
@@ -248,7 +249,28 @@
       "1/1 [==============================] - 2s 2s/step - loss: 0.6143 - accuracy: 0.6571\n",
       "Epoch 15/200\n",
       "1/1 [==============================] - 11s 11s/step - loss: 0.6558 - accuracy: 0.6680\n",
-      "Epoch 16/200\n"
+      "Epoch 16/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.7228 - accuracy: 0.6680\n",
+      "Epoch 17/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.7350 - accuracy: 0.6738\n",
+      "Epoch 18/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7380 - accuracy: 0.6667\n",
+      "Epoch 19/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.6512 - accuracy: 0.7048\n",
+      "Epoch 20/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7130 - accuracy: 0.6095\n",
+      "Epoch 21/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.5880 - accuracy: 0.6762\n",
+      "Epoch 22/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6310 - accuracy: 0.6875\n",
+      "Epoch 23/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6652 - accuracy: 0.5996\n",
+      "Epoch 24/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6853 - accuracy: 0.5273\n",
+      "Epoch 25/200\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6610 - accuracy: 0.5918\n",
+      "Epoch 26/200\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.6353 - accuracy: 0.6667\n"
      ]
     }
    ],
